[lworld] Fatal error in C1 compiled code due to unexpected klass

XMLWordPrintable

      # A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/oracle/valhalla/open/src/hotspot/cpu/x86/macroAssembler_x86.cpp:878), pid=619117, tid=619118
      # fatal error: DEBUG MESSAGE: exact klass and actual klass differ
      #
      # JRE version: Java(TM) SE Runtime Environment (17.0) (fastdebug build 17-lworld3ea+0-2021-01-20-1042597.tobias...)
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 17-lworld3ea+0-2021-01-20-1042597.tobias..., mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, linux-amd64)
      # Problematic frame:
      # V [libjvm.so+0x13ba8c0] MacroAssembler::debug64(char*, long, long*)+0x40

      --------------- T H R E A D ---------------

      Current thread (0x00007fd6d4026540): JavaThread "main" [_thread_in_Java, id=619118, stack(0x00007fd6db733000,0x00007fd6db834000)]

      Stack: [0x00007fd6db733000,0x00007fd6db834000], sp=0x00007fd6db8327f0, free space=1021k
      Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
      V [libjvm.so+0x13ba8c0] MacroAssembler::debug64(char*, long, long*)+0x40
      J 24 c1 MainClass.test([QTest0;)Z (21 bytes) @ 0x00007fd6c5592338 [0x00007fd6c5592240+0x00000000000000f8]

            Assignee:
            Tobias Hartmann
            Reporter:
            Tobias Hartmann
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: