8261631: [lworld] Fatal error in C1 compiled code due to unexpected klass